# atlas

./: .clang-format  .gitignore  CMakeLists.txt  README.md  prompt.txt
src/main/cpp/: CMakeLists.txt  main.cpp
src/main/cpp/com/github/doevelopper/atlas/: API_Export.hpp  CompilerDetection.hpp
src/main/cpp/com/github/doevelopper/atlas/barriers/: RecursiveReadLock.cpp  RecursiveReadLock.hpp  RecursiveReadWriteMutex.cpp  RecursiveReadWriteMutex.hpp  RecursiveWriteLock.cpp  RecursiveWriteLock.hpp  Synchronised.cpp  Synchronised.hpp
src/main/cpp/com/github/doevelopper/atlas/events/obs/: ObserverRegistrar.cpp  ObserverRegistrar.hpp  Subject.cpp  Subject.hpp
src/main/cpp/com/github/doevelopper/atlas/events/pub/: IBroker.cpp  IBroker.hpp  IPublisher.hpp  ISubscriber.hpp  Publisher.cpp  Publisher.hpp  Subscriber.cpp  Subscriber.hpp
src/main/cpp/com/github/doevelopper/atlas/launcher/: Application.cpp  Application.hpp  ApplicationPrivate.cpp  ApplicationPrivate.hpp
src/main/cpp/com/github/doevelopper/atlas/launcher/args/: AbstractConfiguration.cpp  AbstractConfiguration.hpp  AbstractOption.cpp  AbstractOption.hpp  DefaultConfiguration.cpp  DefaultConfiguration.hpp  IConfiguration.cpp  IConfiguration.hpp  IOption.cpp  IOption.hpp  ProgramOption.cpp  ProgramOption.hpp
src/main/cpp/com/github/doevelopper/atlas/logging/: CustomLogger.cpp  CustomLogger.hpp  CustomLoggerPrivate.cpp  CustomLoggerPrivate.hpp
src/main/cpp/com/github/doevelopper/atlas/semver/: GitRevision.hpp  Version.cpp  Version.hpp
src/main/cpp/com/github/doevelopper/atlas/storage/: BasePtr.cpp  BasePtr.hpp  CircularBuffer.cpp  CircularBuffer.hpp
src/main/cpp/com/github/doevelopper/atlas/time/: Alarm.cpp  Alarm.hpp  AlarmFactory.cpp  AlarmFactory.hpp  PosixTimestamp.cpp  PosixTimestamp.hpp
src/main/cpp/com/github/doevelopper/atlas/utils/: FileSystemHandle.cpp  FileSystemHandle.hpp  NoOp.cpp  NoOp.hpp  ShellHandle.cpp  ShellHandle.hpp  Singleton.hpp  TimeFixture.cpp  TimeFixture.hpp
src/main/resources/cmake/: BoostDownloader.cmake  Dependencies.cmake  FindRapidJSON.cmake  ctest2junit  ctest2junit.xsl
src/main/resources/config/: log4cxx.xml  nightOwl.xml
src/main/resources/copilot/: ai-ludo.json  ai-prompts.json  blueprint.json
src/main/resources/copilot/insp/: Prompt-Engineering-Techniques-v1.csv  README.md  basics-of-prompting-and-placeholders.md  chain-of-thought-prompting.md  charm.py  database-for-generation-prompt-engineer-set.md  knowledge-generation-and-knowledge-integration.md  meta-prompting.md  prompt-engineer-set.md  prompting-methodology.md  reverse-prompt-engineering.md  role-prompting.md  specify-parameters-like-format-tone-lenght-target-audience-context.md  zero-shot-and-few-shot-prompting.md
src/site/MIL-STD-498/: CPM.md  FSM.md  IRS.md  README.md  SCOM.md  SDP.md  SIOM.md  SIP.md  SRS.md  SSS.md  STP.md  SUM.md  SVD.md
src/site/MIL-STD-498/01_Plans/: STRP.md
src/site/MIL-STD-498/02_Requirements/: OCD.md
src/site/MIL-STD-498/03_Design/: DBDD.md  IDD.md  SDD.md  SSDD.md
src/site/MIL-STD-498/04_Qualification/: STD.md  STR.md
src/site/MIL-STD-498/05_Operator_Manuals/: COM.md
src/site/MIL-STD-498/07_Software/: SPS.md
src/test/cpp/: CMakeLists.txt  main.cpp
src/test/cpp/com/github/doevelopper/atlas/barriers/: RecursiveReadLockTest.cpp  RecursiveReadLockTest.hpp  RecursiveReadWriteMutexTest.cpp  RecursiveReadWriteMutexTest.hpp  RecursiveWriteLockTest.cpp  RecursiveWriteLockTest.hpp  SynchronisedTest.cpp  SynchronisedTest.hpp
src/test/cpp/com/github/doevelopper/atlas/events/obs/: ObserverRegistrarMock.cpp  ObserverRegistrarMock.hpp  SubjectTest.cpp  SubjectTest.hpp
src/test/cpp/com/github/doevelopper/atlas/events/pub/: PublisherTest.cpp  PublisherTest.hpp  SubscriberTest.cpp  SubscriberTest.hpp
src/test/cpp/com/github/doevelopper/atlas/launcher/args/: AbstractConfigurationMock.cpp  AbstractConfigurationMock.hpp  AbstractOptionMock.cpp  AbstractOptionMock.hpp  ConfigurationMock.cpp  ConfigurationMock.hpp  DefaultConfigurationTest.cpp  DefaultConfigurationTest.hpp  OptionMock.cpp  OptionMock.hpp  ProgramOptionTest.cpp  ProgramOptionTest.hpp
src/test/cpp/com/github/doevelopper/atlas/semver/: VersionTest.cpp  VersionTest.hpp
src/test/cpp/com/github/doevelopper/atlas/storage/: BasePtrTest.cpp  BasePtrTest.hpp  CircularBufferTest.cpp  CircularBufferTest.hpp
src/test/cpp/com/github/doevelopper/atlas/utdriver/: CustomTestEnvironment.cpp  CustomTestEnvironment.hpp  TestDriver.cpp  TestDriver.hpp  TestEventListener.cpp  TestEventListener.hpp  TestEventListenerConfigure.cpp  TestEventListenerConfigure.hpp
src/test/cpp/com/github/doevelopper/atlas/utils/: FileSystemHandleTest.cpp  FileSystemHandleTest.hpp  ShellHandleTest.cpp  ShellHandleTest.hpp  SingletonTest.cpp  SingletonTest.hpp  TimeFixtureTest.cpp  TimeFixtureTest.hpp
src/test/resources/cmake/: TestDependencies.cmake
src/test/resources/config/: log4cxx.xml  tips.xml
